fix bug show list icon on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,11 +14,18 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-image: url('../../public/bg.avif');
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  height: 100%;
   background-position: 50%;
   margin: 0;
   font-family: 'Comic Relief Regular';
@@ -99,11 +106,81 @@ h1 {
   cursor: pointer;
   overflow-y: hidden;
   overflow-x: hidden;
-  height: 100vh;
-
-
+  height: 100%;
 }
 
+#__next {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+
+@supports (-webkit-touch-callout: none) {
+  .container {
+    text-align: center;
+    cursor: pointer;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    height: 100vh;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .container-icon {
+    -webkit-transform: translateZ(0) !important;
+    transform: translateZ(0) !important;
+    -webkit-backface-visibility: hidden !important;
+    backface-visibility: hidden !important;
+  }
+  
+  .login-button-container {
+    -webkit-transform: translateZ(0) !important;
+    transform: translateZ(0) !important;
+  } 
+   .container-icon-wrapper {
+    width: 100% !important;
+    position: absolute !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    gap: 10px;
+    bottom: 70px !important;
+    z-index: 9999 !important;
+  }
+
+  .login-button-container {
+    top: unset !important;
+    position: unset !important;
+    bottom: 70px !important;
+    z-index: 9999 !important;
+  }
+
+  .container-icon {
+    flex-direction: row !important;
+    top: unset !important;
+    position: unset !important;
+    z-index: 9999 !important;
+    display: flex !important;
+  }
+
+  .sound-icon,
+  .info-icon {
+    display: flex !important;
+    z-index: 9999 !important;
+    visibility: visible !important;
+    opacity: 1 !important;
+  }
+
+  .logout-button {
+    top: 0px;
+    left: 50px;
+    width: 100px;
+    height: 40px;
+  }
+}
 
 
 #score {
